# safari-books-0to100

./: .gitignore  .pre-commit-config.yaml  README.md  changelog.md  pyproject.toml  setup.sh
9781492087823/: 9781492087823.json
safari-books-0to100/: main.py
safari-books-0to100/configs/: config.py
safari-books-0to100/exceptions/: errors.py
safari-books-0to100/factories/: factory_provider.py  sb_factory.py
safari-books-0to100/models/: meta_book.py  toc.py
safari-books-0to100/processors/: create_meta_book_processor.py  help_processor.py  refresh_toc_processor.py  unsupported_processor.py
safari-books-0to100/repository/: persist_fs.py  process_fs.py
safari-books-0to100/tests/: .gitignore  conftest.py  test_a_factory.py  test_config.py  test_create_meta_book_processor.py  test_factory_provider.py  test_help_processor.py  test_main.py  test_meta_book.py  test_persist_fs.py  test_validator.py
safari-books-0to100/validator/: validator.py
safari-books-ide/: main.py
safari-books-ide/configs/: config.py
safari-books-ide/exceptions/: safari_books_ide_error.py
safari-books-ide/factories/: factory_provider.py  sb_factory.py
safari-books-ide/models/: meta_book.py  toc.py
safari-books-ide/processors/: create_meta_book_processor.py  refresh_toc_processor.py
safari-books-ide/repository/: persist_fs.py  process_fs.py
safari-books-ide/tests/: conftest.py  test_a_factory.py  test_config.py  test_create_meta_book_processor.py  test_factory_provider.py  test_help_processor.py  test_main.py  test_meta_book.py  test_persist_fs.py  test_validator.py
(+10 files in other folders)
