[tool.poetry]
name = "safari-books-0to100"
version = "0.1.0"
description = "safari books 0to100 to learn anything"
authors = ["obar1 <obar1@pm.me>"]

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^5.4.1"
pylint = "^2.10.2"
black = "^21.7b0"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pre-commit = "^2.11.1"
black = "^21.7b0"
pytest-xdist = "^2.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
